--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">小热点-餐厅端</string>
-    <string name="home">热点</string>
-    <string name="find">发现</string>
-    <string name="release">""</string>
-    <string name="projection">投屏</string>
+    <string name="book">预定</string>
+    <string name="customer">客户</string>
+    <string name="service">服务</string>
     <string name="me">我的</string>
 
     <string name="exit_app">再按一次退出热点儿</string>
