--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,7 +112,7 @@
     <string name="msg_sure">Are you sure?</string>
     <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
     <string name="button_add_calendar">Add to calendar</string>
-    <string name="button_add_contact">Add contact</string>
+    <string name="button_add_contact">Add contactFormat</string>
     <string name="button_back">Back</string>
     <string name="button_book_search">Book Search</string>
     <string name="button_cancel">Cancel</string>
@@ -137,7 +137,7 @@
     <string name="button_sms">Send SMS</string>
     <string name="button_web_search">Web search</string>
     <string name="button_wifi">Connect to Network</string>
-    <string name="result_address_book">Found contact info</string>
+    <string name="result_address_book">Found contactFormat info</string>
     <string name="result_calendar">Found calendar event</string>
     <string name="result_email_address">Found email address</string>
     <string name="result_geo">Found geographic coordinates</string>
