--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -438,6 +438,7 @@
     <string name="create_video">创建视频列表</string>
     <string name="found_tv_hint">发现可连接电视，请连接</string>
     <string name="import_cancel"><u>暂不使用</u></string>
+    <string name="welcome_default">欢迎光临，祝您用餐愉快！</string>
 
 
 </resources>
